# pypad

./: README.md  pyproject.toml
src/pypad/: __init__.py  banner.py
